# ViaLacteaWeb

./: .gitignore  CMakeLists.txt  README.md
Client_source/: README.md  client_source.tar.xz  package-lock.json  package.json  vtk_protocol.py  vue.config.js
Client_source/src/: App.vue  idsrvAuth.js  main.js  router.js  vue-oidc-client.js
Client_source/src/components/core/App/: index.vue  script.js  style.css  template.html  template2.html  template3.html
Client_source/src/components/core/App2/: index.vue  script.js  style.css  template.html
Client_source/src/components/core/Hello/: index.vue  template.html
Client_source/src/components/widgets/RemoteRenderingView/: index.vue  script.js
Client_source/src/plugins/: vuetify.js
Client_source/src/protocols/: VLWBase.js  index.js
Client_source/src/store/: index.js  vlw.js  wslink.js
Client_source/src/views/: Home.vue  VLW.vue  VLW3.vue
Docker/: Dockerfile
Docker/client/: index.html
Docker/client/css/: app.6e7b3235.css
Docker/client/js/: about.51588f41.js  about.51588f41.js.map  app.fcca218a.js  app.fcca218a.js.map  chunk-vendors.1c5b3eee.js
Docker/config/apache/: 001-vlw.conf  001-vlw_ssl.conf
Docker/config/launcher/: launcher.json  launcher_template.json
Docker/scripts/: init.sh  start.sh
Kubernetis/: vlw_latest.yaml
client/: data.json  index.html  package-lock.json
client/css/: about.2f4deaba.css  app.02fc17e0.css  app.092d13ee.css  app.5f8a82e8.css  app.8b5baa04.css  app.fb5eda0f.css  chunk-vendors.3766e5f5.css  chunk-vendors.b75e71c5.css  chunk-vendors.ed64ad0b.css
client/js/: about.0cfb3d02.js  about.0cfb3d02.js.map  about.676507bb.js  about.676507bb.js.map  about.89f56461.js  about.89f56461.js.map  app.2532c7ac.js  app.2532c7ac.js.map  app.3b3cf76a.js  app.3b3cf76a.js.map  app.3c19274e.js  app.3c19274e.js.map  app.5fcf550d.js  app.5fcf550d.js.map  app.6e4f6627.js  app.6e4f6627.js.map  app.a3931aa4.js  app.a3931aa4.js.map  app.a754046a.js  app.a754046a.js.map  app.acc05ea4.js  app.acc05ea4.js.map  app.f42688f2.js  app.f42688f2.js.map  chunk-vendors.3154dc8e.js  chunk-vendors.4ec5ac08.js  chunk-vendors.4ec5ac08.js.map  chunk-vendors.5a091820.js  chunk-vendors.5a091820.js.map  chunk-vendors.b7cf3dbf.js  chunk-vendors.b7cf3dbf.js.map  chunk-vendors.d7c51246.js  chunk-vendors.e7c01704.js
client/public/: index.html
client/src/: main.js
client/src/components/core/App/: script.js  style.css  template copy.html  template.html
client/src/components/widgets/RemoteRenderingView/: script.js
client/src/protocols/: Cone.js
client/src/store/: cone.js  wslink.js
docs/: Doxyfile.in  user.md
remote/server/: test.py  test2.py  testFile.ply  test_structured.py  test_vtk.py  vtk_server.py  vtk_server2.py
remote/vtkjsserver/: vtk_protocol.py  vtkw-server.py
remote/vtkjsserver/vtkjsserver/: vtk_protocol.py  vtkw-server.py
src/: CMakeLists.txt  astroutils.cpp  astroutils.h  color.cpp  color.h  fits.module  luthelper.cpp  luthelper.h  main.cpp  tinyxml2.cpp  tinyxml2.h  vialacteainitialquery.cpp  vtkFitsReader.cxx  vtkFitsReader.h  vtkFitsReader_res.cxx  vtkFitsReader_res.h  vtkFitsUnstructuredReader.cxx  vtkFitsUnstructuredReader.h  vtkLegendScaleActor.cxx  vtkLegendScaleActor.h  vtk_standard.cpp  vtkellipse.cpp  xmlparser.cpp  xmlparser.h
